Doc: Fix qdoc warnings in qtbase

Fixes: QTBUG-93496
Task-number: QTBUG-90662
Change-Id: I894ed70ca8514cfb0afc7e547c7fe3efadcaad50
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit 9c6df426b73453d1e5e5dbad40ad38d67f0ba5d0)