src/corelib/thread/qmutex.cpp
@@ -415,7 +415,7 @@ void QRecursiveMutex::unlock() noexcept
 
 
 /*!
-    \class template <typename Mutex> QMutexLocker
+    \class QMutexLocker
     \inmodule QtCore
     \brief The QMutexLocker class is a convenience class that simplifies
     locking and unlocking mutexes.
